[tool.poetry]
name = "spatial_information"
version = "0.1.0"
description = "Provides tools for calculating spatial information."
authors = ["Jeffrey Werbin <jwerbin@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.1"
scipy = "^1.11.3"
imageio = "^2.31.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
